--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             <hr class="divider" style="margin: 8px 0px 8px 0px"/>
 
-            <div class="row align-items-end " style="max-height: 20vh; min-height: 100px;">
+            <div class="row align-items-end custom-footer" style="max-height: 20vh; min-height: 100px;">
                 <div class="col footer">
                     <p class="footer-title"> Organitzadors i col·laboradors: </p>
                     <div class="row" style="padding-bottom: 8px">
