--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         
         <div class="container-fluid min-vh-100" >
                 
-               <div class="row align-items-center justify-content-center" style="margin-top: 36px;min-height: 79vh;">
+               <div class="row align-items-center justify-content-center" style="min-height: 79vh;">
                 <div class="col" style="text-align: center;">
                     <h1 class="title1">ROBOCAT FEDAC SANT NARCÍS</h1>
                     <h3 class="title2">Proximament...</h3>
