SVG robocat logo added

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
                 
                <div class="row align-items-center justify-content-center" style="min-height: 79vh;">
                 <div class="col" style="text-align: center;">
-                    <h1 class="title1">ROBOCAT FEDAC SANT NARCÍS</h1>
-                    <h3 class="title2">Proximament...</h3>
+                    <h1 class="title1">PROPERAMENT, MÉS INFORMACIÓ DE ROBOCAT GIRONA I DE LA GRAN FINAL</h1>
                     <div class="row align-items-center justify-content-center" style="margin-top: 36px;" >
                     </div>
                 </div>
